<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.harmonievent.homepage.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.harmonievent.homepage.fragment.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.harmonievent.homepage.fragment.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.harmonievent.homepage.fragment.about.AboutFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:label="@string/menu_logout"
        />
</navigation>